<?xml version="1.0" encoding="utf-8"?>
<resources   xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Tala-Tala</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="action_settings">Settings</string>
    <string name="action_done">Terminer</string>
    <string name="action_palette">Palette</string>
    <string name="action_remove">Initialiser</string>
    <string name="action_undo">Arriere</string>

    <string name="color_picker_default_title" msgid="1248663997452044787">"Sélectionner une couleur"</string>
    <string name="color_swatch_description" msgid="2883438431173736180">"Couleur <xliff:g id="COLOR_INDEX">%1$d</xliff:g>"</string>
    <string name="color_swatch_description_selected" msgid="5020921249944943124">"Couleur <xliff:g id="COLOR_INDEX">%1$d</xliff:g> sélectionnée"</string>
    <string name="action_about">A propos</string>

    <string-array name="default_color_choice_values" translatable="false">
        <item>#33b5e5</item>
        <item>#aa66cc</item>
        <item>#99cc00</item>
        <item>#ffbb33</item>
        <item>#ff4444</item>
        <item>#0099cc</item>
        <item>#9933cc</item>
        <item>#669900</item>
        <item>#ff8800</item>
        <item>#cc0000</item>
        <item>#ffffff</item>
        <item>#eeeeee</item>
        <item>#cccccc</item>
        <item>#888888</item>
        <item>#000000</item>
    </string-array>

</resources>
