<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jcertif.relooking.MainActivity">




    <item android:id="@+id/action_palette"
        android:title="@string/action_palette"
        android:orderInCategory="100"
        android:icon="@drawable/ic_color_lens_white_48dp"
        app:showAsAction="always"/>


    <item android:id="@+id/action_undo"
        android:title="@string/action_undo"
        android:orderInCategory="200"
        android:icon="@drawable/ic_undo_white_48dp"
        app:showAsAction="always"/>

    <item android:id="@+id/action_done"
        android:title="@string/action_done"
        android:orderInCategory="300"
        android:icon="@drawable/ic_done_white_48dp"
        app:showAsAction="always"/>


    <item android:id="@+id/action_remove_all"
        android:title="@string/action_remove"
        android:orderInCategory="400"
        android:icon="@drawable/ic_delete_white_48dp"
        app:showAsAction="always"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="500"
        android:icon="@drawable/ic_delete_white_48dp"
        app:showAsAction="never"/>
</menu>
